--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -39,6 +39,10 @@
 
 [[constraint]]
   branch = "master"
+  name = "github.com/lestrrat-go/strftime"
+
+[[constraint]]
+  branch = "master"
   name = "golang.org/x/sync"
 
 [prune]
