--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,6 +26,10 @@
 
 
 [[constraint]]
+  name = "github.com/Songmu/timestamper"
+  version = "0.0.1"
+
+[[constraint]]
   branch = "master"
   name = "github.com/Songmu/wrapcommander"
 
@@ -44,6 +48,10 @@
 [[constraint]]
   branch = "master"
   name = "golang.org/x/sync"
+
+[[constraint]]
+  name = "golang.org/x/text"
+  version = "0.3.0"
 
 [prune]
   go-tests = true
